<resources>
    <string name="app_name">Projects Hub</string>
    <string name="menu_settings">Settings</string>
    <string name="nit">NIT Jamshedpur</string>
    <string name="developed_by">Developed by:</string>
    <string name="prince">Prince</string>
    <string name="computer_science_engineering">Computer Science Engineering</string>
    <string name="send_us_your_ideas_at">Send us your ideas at:</string>
    <string name="prince11rajput_gmail_com">prince11rajput@gmail.com</string>

</resources>
