<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">


    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#353434"
        android:text="@string/developed_by"
        android:textSize="25sp"
        android:layout_marginBottom="2dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        tools:ignore="UnusedAttribute" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2b1b1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prince"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:textColor="#0b1a65"
        app:fontFamily="serif"
        android:textSize="30sp"
        android:layout_marginBottom="1dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/computer_science_engineering"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:textAlignment="center"
        android:textColor="#4b4949"
        app:fontFamily="serif"
        android:textSize="20sp"
        android:layout_marginBottom="2dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nit"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:textAlignment="center"
        android:textColor="#4b4949"
        app:fontFamily="serif"
        android:textSize="20sp"
        android:layout_marginBottom="15dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#b2b1b1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_us_your_ideas_at"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textColor="#353434"
        app:fontFamily="serif"
        android:textStyle="bold"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/prince11rajput_gmail_com"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:textAlignment="center"
        android:layout_marginTop="2dp"
        android:textColor="#4b4949"
        app:fontFamily="serif"
        android:textColorHighlight="#f3f3f3"
        android:textColorLink="#111940"
        android:textSize="20sp"
        android:layout_marginBottom="15dp" />



</LinearLayout>
